--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -203,41 +203,42 @@ nav ul {
   list-style: none;
   display: flex;
   margin-top: 2em;
+  align-items: baseline;
 }
-/* line 38, ../sass/_dev-internship.scss */
+/* line 39, ../sass/_dev-internship.scss */
 nav ul li {
-  align-self: center;
   flex-grow: .25;
 }
 /* line 42, ../sass/_dev-internship.scss */
 nav ul li + li {
   margin: 0;
 }
-/* line 45, ../sass/_dev-internship.scss */
+/* line 46, ../sass/_dev-internship.scss */
 nav ul li a {
   color: #666666;
 }
-/* line 48, ../sass/_dev-internship.scss */
+/* line 49, ../sass/_dev-internship.scss */
 nav ul li a:hover {
   text-decoration: underline;
 }
-/* line 52, ../sass/_dev-internship.scss */
+/* line 53, ../sass/_dev-internship.scss */
 nav ul li:first-child {
   flex-grow: 3;
 }
 
 /*MEDIA QUERIES*/
 @media all and (max-width: 1150px) {
-  /* line 63, ../sass/_dev-internship.scss */
+  /* line 64, ../sass/_dev-internship.scss */
   header {
     padding: 2em;
   }
 
-  /* line 67, ../sass/_dev-internship.scss */
+  /* line 68, ../sass/_dev-internship.scss */
   nav ul {
     flex-direction: column;
+    align-items: center;
   }
-  /* line 70, ../sass/_dev-internship.scss */
+  /* line 71, ../sass/_dev-internship.scss */
   nav ul li:first-child {
     margin-bottom: 2em;
   }
